<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/transfer_by_worknum"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:id="@+id/clear_work_num"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#1dc263"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/next_submit">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_worknum_info"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/next_submit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#1dc263"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/next_submit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/clear_work_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scan_num_info" />

    <LinearLayout
        android:id="@+id/worknum_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/work_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_number"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/work_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#1dc263"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/work_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/esl_num_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/esl_number"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/work_num"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/esl_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#1dc263"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/esl_num_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scan_num_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worknum_info">

        <TextView
            android:id="@+id/esl_nam_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esl_number_sacn"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/work_num"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/esl_num_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#1dc263"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/esl_num_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>