<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/location"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/worknum_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/work_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_number"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/work_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#1dc263"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/work_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/elsnum_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worknum_info">

        <TextView
            android:id="@+id/esl_num_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esl_number"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/work_num"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/esl_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#1dc263"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@+id/esl_num_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/elsnum_info">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:entries="@array/location" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#1dc263"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_by_worknum"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/clear_work_num"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#1dc263"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_worknum_info"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>