<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/package_line"
        app:titleTextColor="@android:color/white" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="40dp"
            app:srcCompat="@drawable/im_pda" />

        <ImageView
            android:id="@+id/iv_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            app:srcCompat="@drawable/im_barcode" />

        <ImageView
            android:id="@+id/iv_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:srcCompat="@drawable/im_box" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/chose"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <RadioGroup
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RadioButton
                android:id="@+id/rfid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/rb_package_scan"
                android:checked="true"
                android:paddingStart="8dp"
                android:text="@string/scan"
                android:textColor="#5a5a76" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" />

            <RadioButton
                android:id="@+id/barCode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/rb_package_scan"
                android:paddingStart="8dp"
                android:text="@string/scan_code"
                android:textColor="#5a5a76" />
        </RadioGroup>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/scan"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        app:cardBackgroundColor="#6789ff"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chose">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_esl_scan_every"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/clear_by_worknumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="32dp"
        app:cardBackgroundColor="#1dc263"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_esl_by_worknumber"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>